# mrcs.py

./: README.md  pyproject.toml
documentation/: Client.md  Constants.md  Getting started.md  Moving between mrcs.py and w96msgroom.py.md
src/mrcs/: client.py  constants.py  prefix_bot.py
src/w96msgroom/: client.py
tests/: 0-do-nothing.py  1-ping-bot.py  2-UNSAFE-eval-bot.py  3-prefix-bot.py
